This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
		Ryan Schmidt <rschmidt@mac.com> noted configure didn't
		recognize MacOS X.  Downloaded new config.guess.

		Andreas Kupries <andreask@activestate.com> provided CONST
		patches to accomodate Tcl changes per TIP 27.

2/25/02 5.35.0	Joe Eggleston <joe@arbor.net> noted bug in full_buffer test.
		The test hadn't been I18'd properly and was testing chars
		instead of bytes.  Also fixed diagnostics so it printed when
		it was testing full buffer even if there wasn't one.

2/7/02	5.34.1	Bruce Hartweg <brhartweg@bigfoot.com> noted that direct spawn
		ids were not being tested so something like "expect -i exp9999"
		would dump core.  Evidentally a bug from the 5.31 transition.

12/20/01 5.34.0	Don Porter <don.porter@nist.gov> provided package-related
		fixes for test suite.

		Brian Theado <brian.theado@usa.net> noted that interact's -re
		support broke when offsets kicked in.  Turned out that the
		regexp engine supports them during execution but the results
		are delivered RELATIVE to the offset.  (I suspect this was done
		due to expediency.)

10/1/01 5.33.0	<mark@doradosoftware.com> found that expect's diagnostics
		didn't include the "no" after testing for a full buffer.

		Hemang Lavana <hlavana@cisco.com> noted that "debug" (Dbg_On)
		calls didn't always force the debugger into step mode.

		Martin Kammerhofer <dada@sbox.tugraz.at> noted that the man
		page neglected to document interpreter -eof.

		Chris Clare <clarec@nortelnetworks.com> provided fix for
		multiple decl in C lib.

		Sheng Wang <wangs@sh.bel.alcatel.be> found interact's
		can-match code had broken.  It was missing the special hook
		that Henry had added just for this purpose.  How strange.

		Dieter Fiebelkorn <dieter@fiebelkorn.net> requested addition